[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/art/items/nut.png" type="Texture" id=1]
[ext_resource path="res://assets/art/ui/ammo_empty.png" type="Texture" id=2]
[ext_resource path="res://assets/art/ui/full_ammo.png" type="Texture" id=3]
[ext_resource path="res://assets/art/ui/fire_empty.png" type="Texture" id=4]
[ext_resource path="res://assets/art/ui/full_fire.png" type="Texture" id=5]
[ext_resource path="res://assets/art/ui/full_cold.png" type="Texture" id=6]
[ext_resource path="res://assets/art/ui/cold_empty.png" type="Texture" id=7]
[ext_resource path="res://src/Level/TunnelUI.gd" type="Script" id=8]

[node name="TunnelUI" type="CanvasLayer"]
script = ExtResource( 8 )
__meta__ = {
"_edit_horizontal_guides_": [ 69.0, 85.0, 146.0, 161.0 ],
"_edit_vertical_guides_": [ 5.0 ]
}

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 1109, 28 )
texture = ExtResource( 1 )

[node name="AmmoBar" type="TextureProgress" parent="."]
margin_left = 6.0
margin_top = 4.0
margin_right = 284.0
margin_bottom = 75.0
value = 100.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
texture_progress_offset = Vector2( 56, 16 )

[node name="FireBar" type="TextureProgress" parent="."]
margin_left = 6.0
margin_top = 81.0
margin_right = 284.0
margin_bottom = 152.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
texture_progress_offset = Vector2( 56, 16 )

[node name="ColdBar" type="TextureProgress" parent="."]
margin_left = 6.0
margin_top = 158.0
margin_right = 284.0
margin_bottom = 229.0
value = 100.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 6 )
texture_progress_offset = Vector2( 56, 16 )
